fix: remove overflow to show period and orgunit components

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,8 @@
 
 html,
 body {
-  height: auto;
-  overflow-x: hidden;
+  height: 100%;
+  /* overflow-x: hidden; */
 }
 body {
   margin: 4px;
